# rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  extensions.rs  extensions_src  hide_failing_tests.sh  libcfg_select_parse_error.rlib  notes.md  rebuild.sh  rebuild_fixed.sh  restore_failing_tests.sh  run_all_tests.sh  rustc  self-host-build.sh  test  test.sh  test_box  test_byte  test_rune  todo.md
compiler/extensions/: Cargo.toml
compiler/extensions/src/: all.rs  lib.rs  lists.rs  macros.rs  numbers.rs  strings.rs  truthy.rs  val.rs
probes/: .gitignore  CONVERSION_SUMMARY.md  Cargo.toml  README.md  build.rs  demo_unwrap_shorthand.rust  lib.rs  run_all_tests.sh  rust-analyzer.toml  test__any.rs  test_add.rs  test_all_synonyms.rs  test_all_synonyms.rust  test_and_or.goo  test_and_or.rs  test_and_or.rust  test_array_1indexed.rs  test_array_1indexed.rust  test_array_like_slice.rs  test_array_like_slice.rust  test_as_cast.rs  test_as_cast.rust  test_as_cast_comprehensive.rs  test_as_cast_comprehensive.rust  test_as_cast_convert.rs  test_as_cast_convert.rust  test_as_cast_list.rs  test_assert.rs  test_assert.rust  test_assign.rs  test_assign.rust  test_assign_fetch.rs  test_assign_fetch2.rs  test_at_map.rs  test_at_map.rust  test_at_vec.rs  test_at_vec.rust  test_auto_return.rs  test_auto_return.rust  test_box.rust  (+310 more)
probes/.cargo/: config.toml
probes/helper/: greetings.rs
probes/notes/: parser-issues.md  rust-analyzer-indexing-fix.md  rustrover-configuration.md  string-char-comparison.md
probes/todo/: test_class_funcs.rust  test_class_methods.rust  test_colon_eq.rust  test_colon_eq2.rust  test_comprehensive_units.rust  test_dynexport_linked.rust  test_dynexport_user.rust  test_dynload_complete.rust  test_dynload_prelude.rust  test_import_file.rust  test_import_folder.rust  test_in_operator_maps.rust  test_in_operator_strings.rust  test_int_float_coercion.rust  test_iterator.rust  test_lambda.rust  test_list_filter.rust  test_list_methods_broken.rust  test_list_shift.rust  test_list_synonyms_only.rust  test_manual_slices.rust  test_map.rust  test_map_dot_comprehensive.rust  test_map_dot_nested.rust  test_map_dot_notation.rust  test_map_fields.rust  test_map_type_inference.rust  test_modify.rust  test_non_modifying.rust  test_pipe.rust  test_pow_hat.rust  test_print_comparison.rust  test_printf.rust  test_return_void.rust  test_script_mode.rust  test_simple_let.rust  test_slice_inference_core.rust  test_slice_inference_final.rust  test_string_char_comparison.rust  test_string_char_literal.rust  (+13 more)
(+219 files in other folders)
