[package]
name = "probes"
version = "0.1.0"
edition = "2021"

# This is a test-only crate for custom Rust syntax extensions
# Tests should be run with ./run_all_tests.sh using the custom rustc

#[lib]
#path = "lib.rs"
#test = false

# Individual test files using custom syntax
# These will show in IDE but must be run with custom rustc via run_all_tests.sh

#[[test]]
#name = "test_assign"
#path = "test_assign.rs"
#harness = true

[dependencies]
